--- a/style.css
+++ b/style.css
@@ -77,17 +77,25 @@ pre {
   width: fit-content;
   background-color: #121212;
   color: #e2e2e2;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row-reverse;
 }
-pre i {
-  font-size: 1.25rem;
-  display: block;
-  float: right;
+pre .copy {
   margin-left: 20px;
   transition: 0.3s;
+  color: black;
+  background-color: white;
+  padding: 2px 10px;
+  font-size: 12px;
+  border: none;
+  border-radius: 6px;
+}
+pre .copy:hover {
+  background-color: rgb(13, 110, 253);
   color: white;
 }
-pre i:hover {
-  color: rgb(13, 110, 253);
+pre code {
 }
 @media screen and (max-width: 800px) {
   #navbar {
